[package]
name = "float_duration"
version = "0.1.0"
authors = ["Tyler Reisinger <reisinger.tyler@gmail.com>"]
keywords = ["time", "duration", "float", "simulation"]
description = """
"""
license = "MIT"
readme = "README.md"

[lib]
name = "float_duration"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.3.1", optional = true }
time = { version = "0.1.37", optional = true }

[features]
default = ["chrono", "time"]
