[package]
name = "float_duration"
version = "0.3.3"
authors = ["Tyler Reisinger <reisinger.tyler@gmail.com>"]

description = """
Floating-point Duration support.

Provides quantification for spans of time. Unlike the standard std::time or the chrono crate, this crate aims to provide a fully featured Duration type which exposes and uses floating-point values instead of integer ones.
"""

license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/float_duration"
homepage = "https://github.com/tylerreisinger/rust-float-duration"
repository = "https://github.com/tylerreisinger/rust-float-duration"

keywords = ["time", "duration", "float", "simulation"]
categories = ["date-and-time"]

[badges]
travis-ci = { repository = "tylerreisinger/rust-float-duration" }

[lib]
name = "float_duration"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.0", optional = true }
time = { version = "0.1.37", optional = true }
approx = { version = "0.1.1", optional = true }
serde = { version = "^1.0", optional = true }

[dev-dependencies]
serde_test = "^1.0"

[features]
default = ["chrono", "time", "approx", "serde"]
all = ["chrono", "time", "approx", "serde"]

nightly = []
